# komotool

./: .gitignore  Cargo.toml  README.md
crates/komotool_assets/: Cargo.toml
crates/komotool_assets/src/: lib.rs
crates/komotool_assets/src/remove_watcher/: mod.rs  watcher.rs
crates/komotool_ecs/: Cargo.toml
crates/komotool_ecs/py_scripts/: generate_markers.py
crates/komotool_ecs/src/: lib.rs
crates/komotool_ecs/src/components/: component.rs  container_maker_components.rs  mod.rs  monitor_maker_components.rs  window_maker_components.rs  workspace_maker_components.rs
crates/komotool_ecs/src/register_komorebi_types/: mod.rs
crates/komotool_ecs/src/relations/: komotoolquerybuilder.rs  mod.rs  registry.rs
crates/komotool_ecs/src/relationships/: container.rs  mod.rs  monitor.rs  window_manager.rs  workspace.rs
crates/komotool_ecs/src/resources/: mod.rs  resource.rs
crates/komotool_ecs/src/systems/: export_state.rs  fetch_state.rs  import_state.rs  mod.rs  register_maker_components.rs
crates/komotool_framepace/: Cargo.toml
crates/komotool_framepace/src/: lib.rs
crates/komotool_komorebic/: Cargo.toml
crates/komotool_komorebic/scripts/: generate_bindings.py
crates/komotool_komorebic/src/: lib.rs
crates/komotool_lib/: Cargo.toml
crates/komotool_lib/src/: lib.rs
crates/komotool_lua/: Cargo.toml
crates/komotool_lua/src/: lib.rs
crates/komotool_pipe/: Cargo.toml
crates/komotool_pipe/src/: fetch_state.rs  lib.rs
crates/komotool_rhai/: Cargo.toml
crates/komotool_rhai/src/: lib.rs
crates/komotool_utils/: Cargo.toml
crates/komotool_utils/src/: komotool_schedule.rs  lib.rs
crates/komotool_utils/src/callbacklabels/: callbacklabels.rs  mod.rs
crates/komotool_utils/src/handler/: asset_event_updater.rs  insert_handler_functions.rs  komotool_event_handler.rs  mod.rs  script_function_checker.rs  script_store.rs
crates/komotool_utils/src/loading_systems/: loading.rs  mod.rs
crates/komotool_utils/src/prelude/: mod.rs  prelude.rs
crates/komotool_utils/src/send_event_systems/: event_systems.rs  mod.rs
crates/komotool_utils/src/startup_schedule/: mod.rs  schedule.rs  single_threading.rs
crates/komotool_windows/: Cargo.toml
crates/komotool_windows/src/: lib.rs  monitor_change.rs  monitor_info.rs  window_change.rs  window_info.rs
crates/komotoolc/: Cargo.toml
crates/komotoolc_pipe/: Cargo.toml
crates/komotoolc_pipe/src/: lib.rs
src/: main.rs
