[package]
name = "komotool"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
komotool_pipe = {path = "crates/komotool_pipe"}
komotool_lua = {path = "crates/komotool_lua"}
komotool_komorebic = {path = "crates/komotool_komorebic"}
komotool_rhai = {path = "crates/komotool_rhai"}
komotool_utils = {path = "crates/komotool_utils"}
komotool_windows = {path = "crates/komotool_windows"}
komotoolc_pipe = {path = "crates/komotoolc_pipe"}

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.15.1", default-features = false }
anyhow = "1.0"
serde_json = "1.0"
komorebi-client  = { git = "https://github.com/LGUG2Z/komorebi", tag = "v0.1.33"}
log = "0.4"
bevy_mod_scripting = {version = "0.9.0-alpha.7", features = ["lua","lua54"]}
