[package]
name = "komotool"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_app = {workspace = true}
bevy_state = {workspace = true}
bevy_core = {workspace = true}
bevy_time = {workspace = true}
komotool_pipe = {path = "crates/komotool_pipe"}
komotool_lua = {path = "crates/komotool_lua"}
komotool_komorebic = {path = "crates/komotool_komorebic"}
komotool_rhai = {path = "crates/komotool_rhai"}
komotool_utils = {path = "crates/komotool_utils"}
#komotool_windows = {path = "crates/komotool_windows"}
komotoolc_pipe = {path = "crates/komotoolc_pipe"}
komotool_ecs = {path = "crates/komotool_ecs"}
komotool_assets = {path = "crates/komotool_assets"}
komotool_framepace = {path = "crates/komotool_framepace"}
bevy_mod_scripting = {workspace = true}

[workspace]
members = ["crates/*"]
exclude = ["crates/komotool_windows"]
resolver = "2"

[workspace.dependencies]
bevy_ecs = "0.15.3"
bevy_app = "0.15.3"
bevy_reflect = "0.15.3"
bevy_utils = "0.15.3"
bevy_state = "0.15.3"
bevy_core = "0.15.3"
bevy_time = "0.15.3"
bevy_asset = { version = "0.15.3", features = ["file_watcher"]}
anyhow = "1.0"
serde_json = "1.0"
komorebi-client  = { git = "https://github.com/pro470/komorebi", branch = "komotool"}
log = "0.4"
bevy_mod_scripting = {version = "0.11.1", features = ["lua54", "rhai"]}
indexmap = "2.8.0"
crossbeam-channel = "0.5.14"

[workspace.metadata.bevy_lint]
pedantic = "warn"
missing_reflect = "warn"
panicking_methods = { level = "forbid" }
nursery = { level = "warn" }

[profile.release]
lto = true
codegen-units = 1
