[package]
name = "komotool_assets"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_asset = { workspace = true, features = ["file_watcher"]}
bevy_app = {workspace = true}
bevy_ecs = {workspace = true}
bevy_state = {workspace = true}
bevy_mod_scripting = {workspace = true}
komotool_utils = {path = "../komotool_utils"}
