[package]
name = "komotool_ecs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
bevy_reflect = {workspace = true}
komorebi-client = {workspace = true}
indexmap = {workspace = true}
komotool_pipe = { path = "../komotool_pipe"}
bevy_mod_scripting = {workspace = true}