[package]
name = "komotool_ecs"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = {workspace = true}
bevy_app = {workspace = true}
bevy_reflect = {workspace = true}
bevy_utils = {workspace = true}
komorebi-client = {workspace = true}
indexmap = {workspace = true}
komotool_framepace = { path = "../komotool_framepace"}
komotool_pipe = { path = "../komotool_pipe"}
bevy_mod_scripting = {workspace = true}