[package]
name = "komotool_framepace"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = { workspace = true }
bevy_app = { workspace = true }
bevy_state = { workspace = true }
bevy_time = { workspace = true }
bevy_platform = { workspace = true }
komotool_utils = { path = "../komotool_utils" }
bevy_reflect = { workspace = true }
bevy_utils = "0.16.0"
spin_sleep = "1.3.0"

[lints]
workspace = true
