[package]
name = "komotool_komorebic"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, default-features = false }
komorebi-client = {workspace = true}
bevy_mod_scripting = {workspace = true}
[package]
name = "komotool_komorebic"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_mod_scripting = { workspace = true }
komorebi-client = { workspace = true }
log = { workspace = true }
