[package]
name = "komotool_windows"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true, default-features = false }
# Windows API bindings
windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_UI_Shell",
    "Win32_UI_Controls"
]}

# Additional utilities
winreg = "0.50"          # Windows registry access
once_cell = "1.18"       # For safe COM initialization
tracing = "0.1"          # Logging integration
lazy_static = "1.4"      # For static API initialization
thiserror = "2.0.11"

